Apply fix for the layout class regarding column-gap

--- a/source/css/_layouts.sass
+++ b/source/css/_layouts.sass
@@ -27,6 +27,7 @@
   height: 100% 
   @media only screen and (max-width: $break-l)
     grid-template-columns: 2vh 1fr 2vh
+    grid-column-gap: 0rem
     grid-template-areas: " . top-bar ." " . welcome . " " . welcome . "  " . projects-info . " " . projects . " " . contact . " " . contact-sns . " " . bottom-bar ." 
 
 .layout
